Fix regression: Fadeout would increase the original volume level.

Thanks Andrew and Tuomas for figuring this out :)

BUG: 134274

svn path=/trunk/extragear/multimedia/amarok/; revision=586904